--- a/src/index.css
+++ b/src/index.css
@@ -1,102 +1,99 @@
 body {
   margin: 0;
-  font-family: 'Avenir'; 
+  font-family: "Avenir";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Avenir';
+  font-family: "Avenir";
   display: flex;
-  flex-direction: column;
-  justify-content : center;
-  align-items : center;
-  
+  justify-content: center;
 }
 
-.header{
+/* Header Styling */
+
+.header {
   display: flex;
   justify-content: center;
   align-items: center;
   align-content: center;
   padding-top: 30px;
-
 }
 
-
-h1{
-
+h1 {
   font-size: 100px;
   margin: 2px;
   text-align: center;
-
 }
 
-h2{
+h2 {
   font-size: 24px;
   font-weight: normal;
   margin: 2px;
-
 }
 
-h3{
+h3 {
   font-size: 12px;
   font-weight: normal;
   margin-bottom: 12px;
-
 }
 
-
-.header{
-
+.header {
   display: flex;
   flex-direction: column;
-  justify-content : center;
-  align-items : center;
+  justify-content: center;
+  align-items: center;
   align-content: flex-start;
-  font-family: 'Avenir';
-
-  
+  font-family: "Avenir";
 }
-.nav{
 
+/* Nav Bar Styling */
+
+.nav {
   display: flex;
   flex-direction: row;
-  justify-content : space-evenly;
-  align-items : center;
+  justify-content: space-evenly;
+  align-items: center;
+  /* text-align: center; */
   height: 100px;
-
-  /* width: 1000px; */
+  width: 1084px;
   border-style: solid;
   border-radius: 7px;
   border-width: 2px;
   border-color: black;
   background-color: rgb(156, 156, 156);
-  font-family: 'Avenir';
+  font-family: "Avenir";
   font-size: 32px;
   color: black;
 }
 
-.nav-items{
-color:black;
-text-decoration: none;
-font-weight: bold;
-
+.nav-items {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+    text-align: center;
 }
 
-.nav-items:hover{
-
+.nav-items:hover {
   color: rgb(255, 255, 255);
-  
 }
 
-.text-parent{
-
+/* INPUT Text Styling */
+.text-parent {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
-
+  max-width: 1084px;
 }
 
-textarea{
-  width:500px;
+/* .outer-text-area{
+
+  flex-grow: 1;
+} */
+
+textarea {
+  width:475px;
+  /* flex-grow: 1; */
+  /* width: auto; */
   height: 350px;
   padding: 12px;
   color: rgb(0, 0, 0);
@@ -106,26 +103,42 @@ textarea{
   border-radius: 7px;
   border-width: 2px;
   border-color: black;
-  font-family: 'Avenir';
-  font-size:20px;
+  font-family: "Avenir";
+  font-size: 20px;
 }
 
-.button-container{
+.switch {
 
+  width: 50px;
+  font-size: 40px;
+  font-weight: bold;
+  text-align: center;
+  border: none;
+  background-color: white; 
+}
+
+.switch:hover{
+
+  background-color: rgb(247, 247, 247);
+  font-size: 42px;;
+}
+
+/* Button Styling */
+
+.button-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-content: center;
-  
 }
 
 .button-28 {
   appearance: none;
   background-color: transparent;
-  border: 2px solid #1A1A1A;
+  border: 2px solid #1a1a1a;
   border-radius: 7px;
   box-sizing: border-box;
-  color: #3B3B3B;
+  color: #3b3b3b;
   cursor: pointer;
   display: inline-block;
   font-size: 16px;
@@ -137,14 +150,13 @@ textarea{
   margin: 7px 10px 20px 10px;
   text-align: center;
   text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   width: 200px;
   height: 60px;
   will-change: transform;
-  
 }
 
 .button-28:disabled {
@@ -153,7 +165,7 @@ textarea{
 
 .button-28:hover {
   color: #fff;
-  background-color: #1A1A1A;
+  background-color: #1a1a1a;
   box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
   transform: translateY(-2px);
 }
@@ -163,3 +175,69 @@ textarea{
   transform: translateY(0);
 }
 
+/* Word Entry Styling */
+
+.dataMap {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 1050px;
+  flex-wrap: wrap;
+}
+
+.wordcard {
+  width: 200px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3px 3px 3px 3px;
+
+  border-style: solid;
+  border-radius: 7px;
+  border-width: 2px;
+  border-color: black;
+  position: relative;
+}
+
+.phrasecard {
+  display: flex;
+  flex-basis: auto;
+  justify-content: center;
+  align-items: center;
+  margin: 3px 3px 3px 3px;
+
+  border-style: solid;
+  border-radius: 7px;
+  border-width: 2px;
+  border-color: black;
+  position: relative;
+}
+
+.deletebutton {
+  left: 182px;
+  top: 55px;
+  position: absolute;
+  border-style: hidden;
+  background-color: #fff;
+  height: 14px;
+  width: 14px;
+  text-align: center;
+  text-justify: auto;
+  font-size: 10px;
+  font-weight: bold;
+}
+
+.deletebuttonPhrases {
+  left: 1060px;
+  top: 35px;
+  position: absolute;
+  border-style: hidden;
+  background-color: #fff;
+  height: 14px;
+  width: 14px;
+  text-align: center;
+  text-justify: auto;
+  font-size: 10px;
+  font-weight: bold;
+}
